--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,19 +9,13 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Lab05 - API Rest</title>
+    <title>AnimeAPI</title>
   </head>
 
   <body>
-    <h1>Hello! <br> Lab05 - API Rest </h1>
+    <h1>Hello! <br> AnimeAPI v1 </h1>
+    <h2><a href="https://anime-api7.appspot.com/docs/index.html">Docs</a></h2>
 	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="api/lists">PlayList_API</a></td>
-      </tr>
-    </table>
+    
   </body>
 </html>
